tests/ui/method_wrong_num_args.stderr
[tests/ui/method_wrong_num_args.pea:2:5] error: wrong number of arguments: expected 2, found 3
[tests/ui/method_wrong_num_args.pea:2:7-2:9] note: function being called has signature `fn (i64, i64) -> i64`

error: aborting due to 1 previous error

