tests/ui/method_wrong_num_args.pea
fn main() {
    1.min(2, 3);
}
